# XewaliChess

./: .gitignore  CMakeLists.txt  README.md
python/: pychess.ipynb  xewali.py
src/: ab_engine.cpp  ab_engine.h  engine.cpp  engine.h  features.cpp  features.h  main.cpp  mcts_engine.cpp  mcts_engine.h  strategy.txt  train.cpp  train.h
src/Chess/: book.cpp  book.h  misc.cpp  position.cpp  position.h
src/NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h
src/Xewali/: ab_id_engine.cpp  ab_id_engine.h  evaluation.cpp  evaluation.h  features.cpp  features.h
